--- a/package.json
+++ b/package.json
@@ -11,9 +11,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "pdfobject": "^2.3.0",
-    "react-intersection-observer": "^9.10.3",
-    "react-toastify": "^10.0.5",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
@@ -38,18 +35,22 @@
     "jszip": "^3.10.1",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^3.11.174",
+    "pdfobject": "^2.3.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.1.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
+    "react-intersection-observer": "^9.10.3",
     "react-modal": "^3.16.1",
     "react-model": "^4.3.1",
     "react-pdf": "^9.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
+    "react-scroll": "^1.9.0",
     "react-to-print": "^2.15.1",
+    "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
