--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "file-saver": "^2.0.5",
     "firebase": "^10.12.2",
     "formik": "^2.4.6",
+    "frontend-job": "file:",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
