--- a/firebase.json
+++ b/firebase.json
@@ -18,7 +18,7 @@
           "headers": [
             {
               "key": "Access-Control-Allow-Origin",
-              "value": "http://localhost:5173"
+              "value": "https://www.postula.net"
             }
           ]
         }
