--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-pdf-viewer/zoom": "^3.12.0",
     "@react-pdf/renderer": "^3.4.4",
     "@reduxjs/toolkit": "^2.2.5",
+    "@types/jwt-decode": "^3.1.0",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "date-fns": "^3.6.0",
@@ -34,6 +35,7 @@
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "jszip": "^3.10.1",
+    "jwt-decode": "^4.0.0",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^3.11.174",
     "pdfobject": "^2.3.0",
