--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-model": "^4.3.1",
     "react-pdf": "^9.0.0",
     "react-redux": "^9.1.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.23.1",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.30.2",
