--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.23.1",
     "react-scroll": "^1.9.0",
+    "react-select": "^5.8.1",
     "react-slick": "^0.30.2",
     "react-to-print": "^2.15.1",
     "react-toastify": "^10.0.5",
