--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 VITE_API_URL=https://api-backend.postula.net/api/
  
 VITE_API_URL2=https://api-backend.postula.net/api
+
+VITE_API_URL3=https://api-backend.postula.net
